[package]
name = "background-pattern-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
wasm-bindgen = "=0.2.115"
web-sys = { version = "0.3", features = [
    "CanvasPattern",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "Window",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
